--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export":"next export"
+    "export": "next export"
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.0",
@@ -15,7 +15,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.451.0",
-    "next": "14.2.14",
+    "next": "^15.0.2",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.3",
